# tiny_jni_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/tiny_jni_cpp/: attach_thread_guard.h  builder.h  byte_buffer.h  constructor_delegate_base.h  container_helpers.h  converter.h  current_thread.h  field.h  field_context.h  fundamental_types.h  global_vm.h  method.h  method_context.h  tiny_jni_cpp.h  type_descriptor_base.h
include/tiny_jni_cpp/object_traits/: caller.h  getter.h  setter.h
test/: CMakeLists.txt  TestDataTypes.java  test_data_types.cc
test/async/: CMakeLists.txt  TestAsync.java  test_async.cc
test/data_types/: CMakeLists.txt  TestDataTypes.java  test_data_types.cc
test/fields/: CMakeLists.txt  TestFields.java  test_fields.cc
test/methods/: CMakeLists.txt  TestMethods.java  test_methods.cc
